[package]
name = "platformapi-namespace"
version = "0.3.0"
authors = ["Edward George <edwardgeorge@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.3.9"
reqwest = { version = "0.10.7", features = ["json", "blocking"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
urlencoding = "1.1.1"