[package]
name = "platformapi-namespace"
version = "0.6.4"
authors = ["Edward George <edwardgeorge@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
derive_builder = "0.10.2"
env_logger = "0.8.4"
klap = { git = "https://github.com/edwardgeorge/klap.git", branch = "main" }
log = "0.4.14"
regex = "1.3.9"
reqwest = { version = "0.10.7", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.17"
thiserror = "1.0.20"
urlencoding = "1.1.1"
